fdo#45580 crash on "connect to existing database" wizard